fix(Modal): fixed layout issues and issue with reduceMotion

--- a/src/components/containers/Modal/modal.scss
+++ b/src/components/containers/Modal/modal.scss
@@ -29,7 +29,7 @@
   left: 0;
   display: flex;
   width: 100%;
-  height: fit-content;
+  min-height: fit-content;
   background-color: var(--blackout);
   justify-content: center;
   align-items: flex-start;
